done with all the stuff

--- a/views/FAQ.handlebars
+++ b/views/FAQ.handlebars
@@ -50,14 +50,14 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
 
-                    {{#each users}}
-                    <li>
-                        <a href="/login">{{usergreeting}}{{user1}}</a>
-                    </li>
-                    {{/each}}
+                    
                     
                     <li>
                         <a href="/FAQ">FAQ</a>
+                    </li>
+
+                    <li>
+                        <a href="/suggestion">Suggestions</a>
                     </li>
                 </ul>
             </div>
