--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -47,6 +47,9 @@
                     <li>
                         <a href="/FAQ">FAQ</a>
                     </li>
+                    <li>
+                        <a href="/suggestion">Suggestions</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
