--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -54,6 +54,10 @@
                     <li>
                         <a href="/FAQ">FAQ</a>
                     </li>
+
+                    <li>
+                        <a href="/suggestion">Suggestions</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
