--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,6 +50,10 @@
                     <li>
                         <a href="/FAQ">FAQ</a>
                     </li>
+
+                    <li>
+                        <a href="/suggestion">Suggestions</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
