--- a/views/company.handlebars
+++ b/views/company.handlebars
@@ -85,6 +85,10 @@
 </div>
     {{/each}}
 
+    <div class="container">
+        <a href="/find_vibes" class="btn btn-primary btn-large"><i class="glyphicon glyphicon-arrow-left"></i> Back</a>
+    </div>
+
     <!-- /.banner -->
 
     <!-- Footer -->
