--- a/views/FAQ.handlebars
+++ b/views/FAQ.handlebars
@@ -71,12 +71,35 @@
     </div>
 
     <div class="container">
-    <h2>FAQ</h2>
-    <h3>Will be populated after we conduct user testing</h3>
-    <p>Frequently asked questions (FAQ) or Questions and Answers (QA), are listed questions and answers, all supposed to be commonly asked in some context, and pertaining to a particular topic. The format is commonly used on email mailing lists and other online forums, where certain common questions tend to recur."FAQ" is pronounced as either an initialism (F-A-Q) or an acronym. Since the acronym FAQ originated in textual media, its pronunciation varies; "fack", "faak", "fax", and "facts" are commonly heard.[1] Depending on usage, the term may refer specifically to a single frequently asked question, or to an assembled list of many questions and their answers. Some web page designers may label the list of questions as "FAQ," such as on Google.com,[2] other websites use "FAQs," such as on United States Treasury sites.[3]
-    </p>
+        <h2 align = "center">FAQ</h2>
     </div>
     
+    <div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading"><h2></h2></div>
+        <div class="panel-body">
+        <h4>What is a Vibe?</h4>
+        <p>A distinct emotional state that is sensed intuitively.</p>
+        <h4><br>What does Find Vibes do?</h4>
+        <p>Clicking FindVibes enables you to search through companies and reviews. First you will be prompted to select which company you want to find out more about. After clicking a company name, you will be able to see all of the reviews of that company.</p>
+        <h4><br>What does Write Vibes do?</h4>
+        <p>By clicking on "Write Vibes" you will be taken to a page in which can write your review by filling in text-blocks. If you have more to say about a particular company that does not fit in to the given categories, write it in the "OtherVibes" block. After you are done writing, choose the company you are reviewing from the drop-down menu.</p>
+        <h4><br>If I submit a Vibe, is my submission anonymous?</h4>
+        <p>Yes, we ensure complete security by keeping all reviews anonymous. There is no way that your review will be traced back to you.</p>
+        <h4><br>Will I be able to see my Vibe?</h4>
+        <p>Yes. Our home page displays the most recent vibes; as long as you are one of the most recent vibes, your review will be displayed on our homepage. Furthermore, if you search for your review, you will be able to find it.</p>
+        <h4><br>Can I delete my submission?</h4>
+        <p>No. InternVibes is designed to be account-free. If we allowed deletion, a single user would have the power to delete every single review in our data-base.      </p>
+        <h4><br> Who can see my review?</h4>
+        <p> Anyone. A review will be public upon submission.</p>
+        <h4><br> What is the purpose of the color coding?</h4>
+        <p> Color coding is used to represent the overall vibe of a company. We want users to be able to scroll through a company's reviews and get an overall sense of a company. Green represents the best possible vibe, yellow is an alright vibe, and red represents bad vibes.</p>
+    </div>
+    </div>
+
+
+
+
 
 
     <!-- Header -->
