--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -71,10 +71,31 @@
     </div>
 
     <div class="container">
-    <h2>Help</h2>
-    <h3>Will be populated once we figure out what users need help with most</h3>
-    <p>to give or provide what is necessary to accomplish a task or satisfy a need; contribute strength or means to; render assistance to; cooperate effectively with; aid; assist:
+        <h2 align = "center">About InternVibes</h2>
     </p>
+    </div>
+
+    <div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading"><h2></h2></div>
+        <div class="panel-body">
+        <h4>Purpose</h4>
+        <p>For interns by interns. Connecting students to great internships.  
+Our website arose from a need of finding reviews from others interns rather than company employees. Our mission is to provide users an experience that is not dependent on the money, but more on what experience one will gain from the internship.  Our site gives interns a chance to give candid reviews about internships and allows people to consume reviews quickly. </p>
+<h4><br><br>Who we are?</h4>
+        <p>We are 2 Computer-Science Majors and a Computer-Engineering Major who share a love for programming and problem solving.</p>
+<h4 align = "center"><br><br>Andrei Khleminstki</h4>
+       
+<p align = "center"><img src="http://i.imgur.com/NEmJDnc.jpg" title="source: imgur.com" /></p> 
+        <p align = "center">During the day, Russia’s top 82KG power-lifter. During the night, hacks American main-frame computers. </p>
+
+<h4 align = "center"><br>David Liberman</h4>
+<p align = "center" ><img src="http://i.imgur.com/UqZUlwH.jpg" title="source: imgur.com" /></p>        
+<p align = "center">Previously interned at DraftKings.com. Founder of the UCSD Club Swim Team. Looking to innovate, ladies. Holla.</p>
+        <h4 align = "center"><br>Horea Porutiu</h4>
+        <p align = "center" ><img src="http://i.imgur.com/lrsKpzk.jpg" title="source: imgur.com" /></p>
+        <p align = "center">UCSD men’s tennis #3 singles and #2 doubles player. Strives to play tennis professionally. Wants a career that fuses his technical skills with his passion for tennis. </p>
+    </div>
     </div>
 
 
