--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -90,27 +90,31 @@
          <p>&nbsp;</p>
         <div class="form-group">
           <label for="project">Project:</label>
-          <textarea type="text" class="form-control" id="project" rows="3" placeholder="Project" name="project"></textarea> 
+          <textarea type="text" class="form-control" id="project" rows="3" placeholder="Describe the project that you worked on during your internship.
+For example: I developed scripts in unix to automate testing for the snapdragon 810. It was pretty awesome because I got to work with top if the line hardware and I became a pro at shell scripting." name="project"></textarea> 
         </div>
         <div class="form-group">
           <label for="managment">Management:</label>
-          <textarea type="text" class="form-control" id="management" rows="3" placeholder="Management" name="management"></textarea>
+          <textarea type="text" class="form-control" id="management" rows="3" placeholder="Questions to think about: What was the chain of command? Was the internship very structured? Was your manager also your mentor?
+Example:  My boss was my mentor. He was dope. Everyday at 5 he got us beers for code reviews." name="management"></textarea>
         </div>
         <div class="form-group">
           <label for="team">Team:</label>
-          <textarea type="text" class="form-control" id="management" rows="3" placeholder="Team" name="team"></textarea>
+          <textarea type="text" class="form-control" id="management" rows="3" placeholder="How was the team you worked on structured? Did you work in a lab all day mostly? With other interns? Only with other full time employees?
+Example: My bud and I did peer programming and had a blast." name="team"></textarea>
         </div>
         <div class="form-group">
           <label for="work environment">Work Environment:</label>
-          <textarea type="text" class="form-control" id="workenvironment" rows="3" placeholder="Work Environment" name="workenvironment"></textarea>
+          <textarea type="text" class="form-control" id="workenvironment" rows="3" placeholder="Tell us about the overall environment where you worked. City? Cubicles? Open Desks? Cafeterias? Did you dread going to work or did you love it?
+Example: The googleplex was everything I dreamed about and more!" name="workenvironment"></textarea>
         </div>
         <div>
         
         <h3>How were the vibes?</h3>
         <select class="selectpicker" name="quality">
-            <option>bad</option>
             <option>ok</option>
-            <option>vibn</option>
+            <option>vibn!</option>
+            <option>bad</option>
         </select>
         
         <h6>&nbsp;</h6>
