--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -106,7 +106,7 @@ Example: My bud and I did peer programming and had a blast." name="team"></texta
         <div class="form-group">
           <label for="work environment">Work Environment:</label>
           <textarea type="text" class="form-control" id="workenvironment" rows="3" placeholder="Tell us about the overall environment where you worked. City? Cubicles? Open Desks? Cafeterias? Did you dread going to work or did you love it?
-Example: The googleplex was everything I dreamed about and more!" name="workenvironment"></textarea>
+Example: The Googleplex was everything I dreamed about and more!" name="workenvironment"></textarea>
         </div>
         <div>
         
