--- a/views/write_vibes.handlebars
+++ b/views/write_vibes.handlebars
@@ -113,7 +113,7 @@ Example: The Googleplex was everything I dreamed about and more!" name="workenvi
         <h3>How were the vibes?</h3>
         <select class="selectpicker" name="quality">
             <option>ok</option>
-            <option>vibn!</option>
+            <option>vibn</option>
             <option>bad</option>
         </select>
         
